--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <h2 style="font-weight: 400; color: var(--text-gray)">Web and Mobile Application Developer <span style="color: var(--accent-pink)">&</span> Designer</h2>
             <div style="margin-top: 30px; display: flex; gap: 20px;">
                 <a href="#contact" class="btn-talk" style="padding: 1rem 2.5rem;">Hire Me</a>
-                <a href="Aneesha_S_Resume.pdf" download="Aneesha_S_Resume.pdf" style="color: white; text-decoration: none; align-self: center; font-weight: 500;">Download CV <i class="fa-solid fa-arrow-down" style="margin-left: 8px;"></i></a>
+                <a href="Aneesha_S_CV.pdf" download="Aneesha_S_CV.pdf" style="color: white; text-decoration: none; align-self: center; font-weight: 500;">Download CV <i class="fa-solid fa-arrow-down" style="margin-left: 8px;"></i></a>
             </div>
         </div>
         <div class="hero-img-container">
