--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Aneesha S. | Portfolio - Web & Mobile Developer</title>
     <meta name="description" content="Portfolio of Aneesha S., a Web and Mobile App Developer specializing in Flutter, Dart, and UI/UX Design. Seeking entry-level roles at Avasoft.">
     <meta name="keywords" content="Aneesha S, Flutter Developer, Web Developer, UI/UX Designer, Fatima College Madurai, Portfolio, Avasoft Careers">
-    <meta property="og:title" content="Aneesha S. | Portfolio">
+    <meta property="og:title" content="Aneesha S | Portfolio">
     <meta property="og:description" content="Turning Code Into Visual Stories. Check out my latest Flutter and Web projects.">
     <meta property="og:image" content="https://i.ibb.co/zhGJBgcj/your-image.jpg">
     <meta property="og:type" content="website">
