--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Aneesha S. | Portfolio - Web & Mobile Developer</title>
+    <title>Aneesha S | Portfolio - Web & Mobile Developer</title>
     <meta name="description" content="Portfolio of Aneesha S., a Web and Mobile App Developer specializing in Flutter, Dart, and UI/UX Design. Seeking entry-level roles at Avasoft.">
     <meta name="keywords" content="Aneesha S, Flutter Developer, Web Developer, UI/UX Designer, Fatima College Madurai, Portfolio, Avasoft Careers">
     <meta property="og:title" content="Aneesha S | Portfolio">
