--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <canvas id="star-canvas"></canvas>
 
     <nav>
-        <a href="#" class="logo"><span>A</span>neesha</a>
+        <a href="#" class="logo"><span>A</span>neesha S</a>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -229,7 +229,7 @@
     <section class="hero" id="home">
         <div class="hero-content">
             <p style="color: var(--accent-pink); font-weight: 600; letter-spacing: 1px;">Hello, I'm</p>
-            <h1>Aneesha</h1>
+            <h1>Aneesha <span style="color: var(--accent-purple)">S</span></h1>
             <h2 style="font-weight: 400; color: var(--text-gray)">Web and Mobile Application Developer <span style="color: var(--accent-pink)">&</span> Designer</h2>
             <div style="margin-top: 30px; display: flex; gap: 20px;">
                 <a href="#contact" class="btn-talk" style="padding: 1rem 2.5rem;">Hire Me</a>
